versions/0.8.1/_sources/refs/_aws-cdk_aws-efs.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"NUhEr206Ic1IOo5gSpKeVmbCsvlmVihaqTbXX0WLx8w="}

@aws-cdk/aws-efs
================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/efs/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:efs:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="efs" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>efs</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:efs:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='efs', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-efs/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-efs@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-efs": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-efs@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-efs/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-efs@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-efs": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-efs@0.8.1



.. mdinclude:: ./__aws-cdk_aws-efs.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-efs


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-efs.cloudformation

FileSystemResource
~~~~~~~~~~~~~~~~~~

.. py:class:: FileSystemResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.efs.cloudformation.FileSystemResource;

      .. code-tab:: javascript

         const { cloudformation.FileSystemResource } = require('@aws-cdk/aws-efs');

      .. code-tab:: typescript

         import { cloudformation.FileSystemResource } from '@aws-cdk/aws-efs';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``FileSystemResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``FileSystemResource``
   :type properties: :py:class:`~@aws-cdk/aws-efs.cloudformation.FileSystemResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ElasticFileSystemTagProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.efs.cloudformation.FileSystemResource.ElasticFileSystemTagProperty;

         .. code-tab:: javascript

            // cloudformation.FileSystemResource.ElasticFileSystemTagProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FileSystemResource.ElasticFileSystemTagProperty } from '@aws-cdk/aws-efs';





      .. py:attribute:: key

         ``FileSystemResource.ElasticFileSystemTagProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-efs-filesystem-filesystemtags.html#cfn-efs-filesystem-filesystemtags-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: value

         ``FileSystemResource.ElasticFileSystemTagProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-efs-filesystem-filesystemtags.html#cfn-efs-filesystem-filesystemtags-value


         :type: string or :py:class:`@aws-cdk/cdk.Token`



FileSystemResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: FileSystemResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.efs.cloudformation.FileSystemResourceProps;

      .. code-tab:: javascript

         // cloudformation.FileSystemResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.FileSystemResourceProps } from '@aws-cdk/aws-efs';





   .. py:attribute:: encrypted

      ``AWS::EFS::FileSystem.Encrypted``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-efs-filesystem.html#cfn-efs-filesystem-encrypted


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: fileSystemTags

      ``AWS::EFS::FileSystem.FileSystemTags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-efs-filesystem.html#cfn-efs-filesystem-filesystemtags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-efs.cloudformation.FileSystemResource.ElasticFileSystemTagProperty` or undefined


   .. py:attribute:: kmsKeyId

      ``AWS::EFS::FileSystem.KmsKeyId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-efs-filesystem.html#cfn-efs-filesystem-kmskeyid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: performanceMode

      ``AWS::EFS::FileSystem.PerformanceMode``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-efs-filesystem.html#cfn-efs-filesystem-performancemode


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


MountTargetResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: MountTargetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.efs.cloudformation.MountTargetResource;

      .. code-tab:: javascript

         const { cloudformation.MountTargetResource } = require('@aws-cdk/aws-efs');

      .. code-tab:: typescript

         import { cloudformation.MountTargetResource } from '@aws-cdk/aws-efs';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``MountTargetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``MountTargetResource``
   :type properties: :py:class:`~@aws-cdk/aws-efs.cloudformation.MountTargetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


MountTargetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: MountTargetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.efs.cloudformation.MountTargetResourceProps;

      .. code-tab:: javascript

         // cloudformation.MountTargetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.MountTargetResourceProps } from '@aws-cdk/aws-efs';





   .. py:attribute:: fileSystemId

      ``AWS::EFS::MountTarget.FileSystemId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-efs-mounttarget.html#cfn-efs-mounttarget-filesystemid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: securityGroups

      ``AWS::EFS::MountTarget.SecurityGroups``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-efs-mounttarget.html#cfn-efs-mounttarget-securitygroups


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: subnetId

      ``AWS::EFS::MountTarget.SubnetId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-efs-mounttarget.html#cfn-efs-mounttarget-subnetid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: ipAddress

      ``AWS::EFS::MountTarget.IpAddress``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-efs-mounttarget.html#cfn-efs-mounttarget-ipaddress


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-efs

